<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/nsv_organization"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.screen.greeting.OrganizationFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_layout_organization"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="24dp"
        android:textSize="32sp"
        android:text="@string/app_name"
        android:letterSpacing="0.1"
        android:fontFamily="@font/roboto_mono_regular"
        android:textColor="?attr/colorPrimary"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:textSize="28sp"
        android:text="@string/choose_organization"
        android:letterSpacing="0.11"
        android:fontFamily="@font/roboto_300"
        android:textColor="?attr/colorSecondary"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_organizations"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="52dp"
        android:hint="@string/organization">

        <AutoCompleteTextView
            android:id="@+id/actv_organizations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_organizations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:enabled="false"

        style="@style/AikataulusButton"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="12dp"
        android:textSize="28sp"
        android:text="@string/btn_choose"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>