<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_courses"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.core.widget.NestedScrollView
    android:id="@+id/nsv_courses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.screen.greeting.CoursesFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_layout_courses"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="24dp"
        android:textSize="32sp"
        android:text="@string/app_name"
        android:letterSpacing="0.05"
        android:fontFamily="@font/roboto_mono_regular"
        android:textColor="?attr/colorPrimary"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:textSize="28sp"
        android:text="@string/choose_courses"
        android:letterSpacing="0.11"
        android:fontFamily="@font/roboto_300"
        android:textColor="?attr/colorSecondary"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="32dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_courses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"

        style="@style/AikataulusButton"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="12dp"
        android:textSize="28sp"
        android:text="@string/btn_courses_complete"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>